--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 h2, h1.page-header {
     font-family: 'Playfair Display', serif;
 }
+body article p, ul {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+}
